--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "start": "nodemon dist/server",
+    "compile": "node dist/server",
     "heroku-postbuild": "npm run start"
   },
   "keywords": [
