--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=8080
-API_ENDPOINT_ADDRESS=http://localhost:3000/graphql
+API_ENDPOINT_ADDRESS=https://zeer-marketplace-api-macsik121.herokuapp.com/graphql
