--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "bootstrap": "^4.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "filereader": "^0.10.3",
     "graphql": "^15.5.1",
     "isomorphic-fetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
