--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "apollo-server-express": "^2.25.2",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.0.2",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -57,7 +57,7 @@
     "node-localstorage": "^2.2.1",
     "nodemon": "^2.0.10",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
     "react-google-recaptcha": "^2.1.0",
