--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jwt-decode": "^3.1.2",
     "node-localstorage": "^2.2.1",
     "nodemon": "^2.0.10",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
