--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "filereader": "^0.10.3",
     "graphql": "^15.5.1",
     "isomorphic-fetch": "^3.0.0",
