--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^5.0.2",
     "cors": "^2.8.5",
+    "css-minimizer-webpack-plugin": "^3.0.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
@@ -59,12 +60,11 @@
     "nodemon": "^2.0.10",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
-    "react-file-base64": "^1.0.3",
-    "react-google-recaptcha": "^2.1.0",
+    "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "terser-webpack-plugin": "^5.1.4"
   }
 }
