--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "isomorphic-fetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
-    "node-localstorage": "^2.2.1",
+    "node-fetch": "^3.0.0",
     "nodemon": "^2.0.10",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
