--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@material-ui/icons": "^4.11.2",
     "apollo-server-express": "^2.25.2",
     "babel-polyfill": "^6.26.0",
+    "base-64": "^1.0.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.0.2",
     "cors": "^2.8.5",
@@ -58,6 +59,7 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.28.1",
