--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=8080
 mode=production
-deployAPIEndpoint=https://zeer-marketplace-api-macsik121.herokuapp.com
-deployUIEndpoint=https://zeer-marketplace-ui-macsik121.herokuapp.com
+deployAPIEndpoint=https://zeer-im-api.herokuapp.com
+deployUIEndpoint=https://zeer-im.herokuapp.com
 devAPIEndpoint=http://localhost:3000
 devUIEndpoint=http://localhost:8080
 RECAPTCHA_KEY=6LevWdccAAAAAMlqf12x4LKOAg4un7Lbjl-Cz3hY
