--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=8080
 mode=production
-deployAPIEndpoint=https://zeer-im-api.herokuapp.com
-deployUIEndpoint=https://zeer-im.herokuapp.com
+deployAPIEndpoint=https://zeer-marketplace-api-macsik121.herokuapp.com
+deployUIEndpoint=https://zeer-marketplace-ui-macsik121.herokuapp.com
 devAPIEndpoint=http://localhost:3000
 devUIEndpoint=http://localhost:8080
-RECAPTCHA_KEY=6LcX4dwcAAAAAPX5EEFc0HRR9OLtPpyIvKCf63Cj
-RECAPTCHA_SECRET=6LcX4dwcAAAAAFkn1GxnW-dtKFj8F7B7paxUPtOW
+RECAPTCHA_KEY=6LevWdccAAAAAMlqf12x4LKOAg4un7Lbjl-Cz3hY
+RECAPTCHA_SECRET=6LevWdccAAAAAOg35q5wPAa80zNBdyx5DqgCMz3p
