downloading pdf files in homepage

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=8080
-mode=production
+mode=development
 deployAPIEndpoint=https://zeer-marketplace-api-macsik121.herokuapp.com
 deployUIEndpoint=https://zeer-marketplace-ui-macsik121.herokuapp.com
 devAPIEndpoint=http://localhost:3000
