--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "base-64": "^1.0.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.0.2",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
